--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: export NODE_OPTIONS=--openssl-legacy-provider && npm install
+            - run: npm install
             - run: npm i react react-dom
             - run:
                 name: Run Tests
