--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - checkout
       - node/with-cache:
           steps:
-            - run: export NODE_OPTIONS=--openssl-legacy-provider && npm i
+            - run: npm i
             - run: npm i react react-dom
             - run:
                 name: Run Tests
