--- a/example/package.json
+++ b/example/package.json
@@ -29,7 +29,7 @@
     "not op_mini all"
   ],
   "engines": {
-    "node": ">=10.15.1",
+    "node": "14.17.3",
     "npm": "^6.0.1"
   },
   "cacheDirectories": [],
