--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@babel/runtime": "^7.16.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@rollup/plugin-replace": "^3.0.0",
     "axios": "^0.21.1",
     "babel-core": "^7.0.0-bridge.0",
     "d3": "^5.12.0",
@@ -74,6 +75,7 @@
     "install": "^0.13.0",
     "ionicons": "^5.5.2",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
@@ -163,11 +165,13 @@
     "rollup-plugin-terser": "^5.1.2",
     "semantic-release": "^17.0.8",
     "semantic-release-cli": "^5.3.1",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "jwt-decode": "^3.1.2"
   },
   "peerDependencies": {
     "react": ">=16.2",
-    "react-dom": ">=16.13.1"
+    "react-dom": ">=16.13.1",
+    "jwt-decode": "^3.1.2"
   },
   "resolutions": {
     "**/**/fsevents": "^1.2.9"
