--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
     "lodash.reduce": "^4.6.0",
+    "lodash.some": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "make-coverage-badge": "^1.2.0",
     "moment-timezone": "^0.5.32",
@@ -91,6 +92,7 @@
     "prop-types": "^15.7.2",
     "rc-drawer": "^1.10.1",
     "react-autosuggest": "^9.4.3",
+    "react-contenteditable": "^3.3.5",
     "react-custom-scrollbars": "^4.2.1",
     "react-grid-layout": "^0.16.6",
     "react-html-renderer": "^0.3.2",
@@ -106,6 +108,7 @@
     "react-tiny-popover": "^3.4.5",
     "react-tooltip": "4.2.10",
     "recordrtc": "^5.6.1",
+    "sanitize-html": "^1.27.1",
     "sql-formatter": "^2.3.3",
     "tabulator-tables": "4.7.2",
     "throttle-debounce": "^2.1.0",
