--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react-select": "^3.1.1",
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
+    "react-switch": "^6.0.0",
     "react-tabulator": "^0.13.2",
     "react-tiny-popover": "^3.4.5",
     "react-tooltip": "4.2.10",
