--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "prop-types": "^15.7.2",
     "rc-drawer": "^1.10.1",
     "react-autosuggest": "^9.4.3",
+    "react-collapse": "^5.1.1",
     "react-contenteditable": "^3.3.5",
     "react-custom-scrollbars": "^4.2.1",
     "react-grid-layout": "^0.16.6",
