--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,19 @@ jobs:
     resource_class: medium
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: npm i
-            - run: npm i react react-dom
-            - run:
-                name: Run Tests
-                no_output_timeout: 60m
-                command: npm run test -- --maxWorkers=4
+      - restore_cache:
+          key: v1-deps-{{ checksum "package-lock.json" }}
+      - run: npm i
+      - run: npm i react react-dom
+      - save_cache:
+          key: v1-deps-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+      - run:
+          name: Run Tests
+          no_output_timeout: 60m
+          command: npm run test -- --maxWorkers=4
+
   test-and-release:
     executor:
       name: node/default
