performance: use alternative methods for large libraries
use Intl.numberFormat instead of Numbro
use dayjs instead of moment
tree shake react icons
add bundle size tools
remove unused assets in example

--- a/package.json
+++ b/package.json
@@ -57,9 +57,10 @@
     "@babel/runtime": "^7.16.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.58",
-    "@rollup/plugin-replace": "^3.0.0",
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-plugin-import": "^1.13.3",
     "d3": "^5.12.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
@@ -85,9 +86,7 @@
     "lodash.some": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "make-coverage-badge": "^1.2.0",
-    "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
-    "numbro": "^2.2.0",
     "parse-num": "^1.0.0",
     "prop-types": "^15.7.2",
     "rc-drawer": "^1.10.1",
@@ -97,7 +96,6 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-grid-layout": "^0.16.6",
     "react-html-renderer": "^0.3.2",
-    "react-icons": "^3.8.0",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
     "react-modal": "^3.11.2",
@@ -163,12 +161,15 @@
     "rollup": "^2.59.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-css-only": "^1.0.0",
+    "rollup-plugin-gzip": "^3.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.9.0",
     "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-visualizer": "^5.6.0",
     "semantic-release": "^17.0.8",
     "semantic-release-cli": "^5.3.1",
     "watch": "^1.0.2"
