--- a/example/package.json
+++ b/example/package.json
@@ -14,12 +14,15 @@
     "react-sortable": "^2.0.0",
     "react-ratings-declarative": "^3.4.1"
   },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
+  },
   "scripts": {
     "preinstall": "npx penv $NODE_ENV",
-    "start": "npx penv $NODE_ENV && SKIP_PREFLIGHT_CHECK=true react-scripts start",
-    "dev": "npx penv $NODE_ENV && SKIP_PREFLIGHT_CHECK=true react-scripts start",
-    "build": "SKIP_PREFLIGHT_CHECK=true react-scripts build",
-    "test": "react-scripts test",
+    "start": "npx penv $NODE_ENV && SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
+    "dev": "npx penv $NODE_ENV && SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
+    "build": "SKIP_PREFLIGHT_CHECK=true react-app-rewired build && compress-cra",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "browserslist": [
