--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-grid-layout": "^0.16.6",
     "react-html-renderer": "^0.3.2",
+    "react-icons": "^4.3.1",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
     "react-modal": "^3.11.2",
