--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-autoql": "file:../",
+    "react-autoql": "file:react-autoql-0.0.0-semantically-released.tgz",
     "antd": "^4.0.1",
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "preinstall": "npx penv $NODE_ENV",
-    "start": "npx penv $NODE_ENV && SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
+    "start": "export PORT=3001 npx penv $NODE_ENV && SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
     "dev": "npx penv $NODE_ENV && SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
     "build": "SKIP_PREFLIGHT_CHECK=true react-app-rewired build && compress-cra",
     "test": "react-app-rewired test",
@@ -35,8 +35,5 @@
     "node": "14.17.3",
     "npm": "^6.0.1"
   },
-  "cacheDirectories": [],
-  "env": {
-    "NODE_ENV": "dev"
-  }
+  "cacheDirectories": []
 }
