--- a/example/package.json
+++ b/example/package.json
@@ -3,16 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-autoql": "file:../",
     "antd": "^4.0.1",
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
     "penv": "^0.2.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-autoql": "file:../",
+    "react-dom": "^16.9.0",
     "react-scripts": "^3.4.1",
-    "react-sortable": "^2.0.0",
-    "react-ratings-declarative": "^3.4.1"
+    "react-sortable": "^2.0.0"
   },
   "devDependencies": {
     "react-app-rewired": "^2.2.1"
@@ -35,5 +34,8 @@
     "node": "14.17.3",
     "npm": "^6.0.1"
   },
-  "cacheDirectories": []
+  "cacheDirectories": [],
+  "env": {
+    "NODE_ENV": "dev"
+  }
 }
