--- a/package.json
+++ b/package.json
@@ -151,6 +151,8 @@
     "postcss-prefixer": "^2.1.2",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-test-renderer": "^16.11.0",
     "rimraf": "^2.7.1",
     "rollup": "^2.59.0",
