perf: use direct import for lodash functions

--- a/package.json
+++ b/package.json
@@ -66,11 +66,13 @@
     "disable-scroll": "^0.5.0",
     "jwt-decode": "^3.1.2",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.functions": "^4.3.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
     "lodash.includes": "^4.3.0",
     "lodash.isempty": "^4.4.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.omit": "^4.5.0",
     "lodash.reduce": "^4.6.0",
     "lodash.some": "^4.6.0",
     "lodash.uniq": "^4.5.0",
