--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - restore_cache:
           key: v1-deps-{{ checksum "package-lock.json" }}
       - run: npm i
-      - run: npm i react react-dom
+      - run: npm i react@16.9.0 react-dom@16.9.0
       - save_cache:
           key: v1-deps-{{ checksum "package-lock.json" }}
           paths:
