--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,8 @@ on:
 jobs:
   if_merged:
     if: github.event.pull_request.merged == true
-    uses: react-autoql/NikkiMeganMoore-patch-1
+    uses: peterjgrainger/action-create-branch@v2.0.1
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     with:
-      branch: 'release-candidate'
+      branch: 'NikkiMeganMoore-patch-1'
