--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   create_release_branch:
     if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
     steps:
       - uses: peterjgrainger/action-create-branch@v2.0.1
         with:
