--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -1,14 +1,12 @@
 name: Create Branch
 
-# on:
-#   pull_request:
-#     types: [closed]
-
-on: [pull_request]
+on:
+  pull_request:
+    types: [closed]
 
 jobs:
   create_release_branch:
-    # if: github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: peterjgrainger/action-create-branch@v2.0.1
