--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,18 +9,18 @@ jobs:
     resource_class: medium
     steps:
       - checkout
-      - restore_cache:
-          key: v1-deps-{{ checksum "package-lock.json" }}
-      - run: npm i
-      - run: npm i react@16.9.0 react-dom@16.9.0
-      - save_cache:
-          key: v1-deps-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
-      - run:
-          name: Run Tests
-          no_output_timeout: 60m
-          command: npm run test -- --maxWorkers=4
+      # - restore_cache:
+      #     key: v1-deps-{{ checksum "package-lock.json" }}
+      # - run: npm i
+      # - run: npm i react@16.9.0 react-dom@16.9.0
+      # - save_cache:
+      #     key: v1-deps-{{ checksum "package-lock.json" }}
+      #     paths:
+      #       - node_modules
+      # - run:
+      #     name: Run Tests
+      #     no_output_timeout: 60m
+      #     command: npm run test -- --maxWorkers=4
 # test-and-release:
 #   executor:
 #     name: node/default
@@ -42,13 +42,13 @@ jobs:
 #         command: npm run test -- --maxWorkers=4
 #     - run: npx semantic-release
 
-# workflows:
-#   build-and-test:
-#     jobs:
-#       - build-and-test:
-#           filters:
-#             branches:
-#               ignore: master
+workflows:
+  build-and-test:
+    jobs:
+      - build-and-test:
+          filters:
+            branches:
+              ignore: master
 # test-and-release:
 #   jobs:
 #     - test-and-release:
