test create branch and checkout

--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           branch: 'release-candidate'
       - uses: actions/checkout@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           ref: release-candidate
       - run: git commit -m "test commit message" --allow-empty
