--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,9 +1,10 @@
 {
+  "branches": ["master", "release-candidate", "NikkiMeganMoore-patch-1"],
+  "dryRun": true,
+  "ci": false,
   "plugins": [
     "@semantic-release/release-notes-generator",
     "@semantic-release/commit-analyzer",
-    "@semantic-release/npm",
-    "@semantic-release/github",
     [
       "@semantic-release/changelog",
       {
@@ -14,6 +15,12 @@
       "@semantic-release/git",
       {
         "assets": ["CHANGELOG.md"]
+      }
+    ],
+    [
+      "@semantic-release/npm",
+      {
+        "npmPublish": false
       }
     ]
   ]
