--- a/.github/workflows/create-release-branch.yml
+++ b/.github/workflows/create-release-branch.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 14.5.0
-        run: |
+      - run: |
           npm ci
           npm i react@16.9.0 react-dom@16.9.0
           npm test
