--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "html-react-parser": "^1.4.9",
     "jwt-decode": "^3.1.2",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.filter": "^4.6.0",
     "lodash.functions": "^4.3.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
