--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-collapse": "^5.1.1",
     "react-contenteditable": "^3.3.5",
     "react-custom-scrollbars": "^4.2.1",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.3.1",
     "react-infinite-scroller": "^1.2.4",
