--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,18 +3,6 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/commit-analyzer",
     "@semantic-release/npm",
-    "@semantic-release/github",
-    [
-      "@semantic-release/changelog",
-      {
-        "changelogFile": "CHANGELOG.md"
-      }
-    ],
-    [
-      "@semantic-release/git",
-      {
-        "assets": ["CHANGELOG.md"]
-      }
-    ]
+    "@semantic-release/github"
   ]
 }
