--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "watch 'npm run build' src",
     "packexample": "cd example/package && npm pack ../..",
-    "test": "NODE_ENV=test && jest",
+    "test": "NODE_ENV=test && jest --silent=false",
     "test:watch": "jest --watch",
     "test:coverage": "npm test -- --coverage",
     "test:badges": "npm run test:coverage  && npx make-coverage-badge --output-path ./public/badge.svg",
@@ -97,7 +97,7 @@
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
     "react-switch": "^6.0.0",
-    "react-tabulator": "^0.13.2",
+    "react-tabulator": "^0.13.8",
     "react-tiny-popover": "^3.4.5",
     "react-tooltip": "4.2.10",
     "recordrtc": "^5.6.1",
