--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "dev": "watch 'npm run build' src",
     "packexample": "cd example/package && npm pack ../..",
-    "test": "NODE_ENV=test && jest",
+    "test": "NODE_ENV=test && jest --silent=false",
     "test:watch": "jest --watch",
     "test:coverage": "npm test -- --coverage",
     "test:badges": "npm run test:coverage  && npx make-coverage-badge --output-path ./public/badge.svg",
@@ -66,6 +66,7 @@
     "html-react-parser": "^1.4.9",
     "jwt-decode": "^3.1.2",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.filter": "^4.6.0",
     "lodash.functions": "^4.3.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
@@ -85,6 +86,7 @@
     "react-collapse": "^5.1.1",
     "react-contenteditable": "^3.3.5",
     "react-custom-scrollbars": "^4.2.1",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.3.1",
     "react-infinite-scroller": "^1.2.4",
