--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "sql-formatter": "^2.3.3",
     "tabulator-tables": "4.7.2",
     "throttle-debounce": "^2.1.0",
-    "uuid": "https://registry.npmjs.org/uuid/-/uuid-2.0.3.tgz"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
