fix: condition input text animation not firing

--- a/example/package.json
+++ b/example/package.json
@@ -34,8 +34,5 @@
     "node": "14.17.3",
     "npm": "^6.0.1"
   },
-  "cacheDirectories": [],
-  "env": {
-    "NODE_ENV": "dev"
-  }
+  "cacheDirectories": []
 }
