feat: move filter lock async logic into its own component
Also included chart refactor - removed chartData copy and we are referencing tableData directly now

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "lodash.omit": "^4.5.0",
     "lodash.reduce": "^4.6.0",
     "lodash.some": "^4.6.0",
+    "lodash.sortby": "^4.7.0",
     "lodash.uniq": "^4.5.0",
     "make-coverage-badge": "^1.2.0",
     "moment-timezone": "^0.5.32",
@@ -99,6 +100,7 @@
     "react-switch": "^6.0.0",
     "react-tabulator": "^0.13.2",
     "react-tiny-popover": "^3.4.5",
+    "react-toastify": "^9.0.1",
     "react-tooltip": "4.2.10",
     "recordrtc": "^5.6.1",
     "sanitize-html": "^2.3.2",
