--- a/package.json
+++ b/package.json
@@ -48,8 +48,11 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.8.1",
     "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
     "d3-array": "^2.3.3",
@@ -105,6 +108,7 @@
     "recordrtc": "^5.6.1",
     "sanitize-html": "^2.3.2",
     "sql-formatter": "^2.3.3",
+    "stylis": "^4.0.4",
     "tabulator-tables": "4.7.2",
     "throttle-debounce": "^2.1.0",
     "uuid": "^8.3.2"
