--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "@babel/runtime": "^7.16.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
     "d3-array": "^2.3.3",
