--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:coverage": "npm test -- --coverage",
     "test:badges": "npm run test:coverage  && npx make-coverage-badge --output-path ./public/badge.svg",
     "test:staged": "jest --findRelatedTests",
-    "build": "NODE_ENV=dev rollup -c",
+    "build": "rollup -c",
     "lint": "eslint '**/*.js'",
     "lint:fix": "prettier-eslint '**/*.js' --write",
     "prepublish": "npx rimraf dist && npm run build",
@@ -48,9 +48,6 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.0",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/lab": "^4.0.0-alpha.61",
-    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
