move prepush hook back to precommit so it works with heroku

--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   "style": "dist/autoql.esm.css",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run packexample && git add example/package/react-autoql-0.0.0-semantically-released.tgz",
-      "pre-push": "npx jest --clearCache && npm run test"
+      "pre-commit": "npx jest --clearCache && npm run test && npm run packexample && git add example/package/react-autoql-0.0.0-semantically-released.tgz"
     }
   },
   "lint-staged": {
