--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.0",
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
@@ -86,7 +87,6 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-custom-scrollbars-2": "^4.4.0",
     "react-grid-layout": "^1.3.4",
-    "react-icons": "^4.3.1",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
     "react-modal": "^3.11.2",
@@ -98,7 +98,7 @@
     "react-tabulator": "^0.13.2",
     "react-tiny-popover": "^3.4.5",
     "react-toastify": "^8.2.0",
-    "react-tooltip": "4.2.10",
+    "react-tooltip": "^4.2.10",
     "recordrtc": "^5.6.1",
     "sanitize-html": "^2.3.2",
     "sql-formatter": "^2.3.3",
