--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.16.0",
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.21.1",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
@@ -86,7 +87,6 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-custom-scrollbars-2": "^4.4.0",
     "react-grid-layout": "^1.3.4",
-    "react-icons": "^4.3.1",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
     "react-modal": "^3.11.2",
@@ -164,7 +164,7 @@
     "rollup-plugin-css-only": "^1.0.0",
     "rollup-plugin-gzip": "^3.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-postcss": "^2.9.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-visualizer": "^5.6.0",
