--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "d3-shape": "^1.3.5",
     "d3-svg-legend": "^2.25.6",
     "d3-transition": "^1.2.0",
+    "date-fns": "^2.28.0",
     "dayjs": "^1.8.36",
     "disable-scroll": "^0.5.0",
     "html-react-parser": "^1.4.9",
@@ -98,6 +99,7 @@
     "react-contenteditable": "^3.3.5",
     "react-custom-scrollbars": "^4.2.1",
     "react-custom-scrollbars-2": "^4.4.0",
+    "react-date-range": "^1.4.0",
     "react-grid-layout": "^1.3.4",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
