--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "react-tabulator": "^0.15.0",
     "react-tiny-popover": "^3.4.5",
     "react-toastify": "^8.2.0",
-    "react-tooltip": "4.2.10",
+    "react-tooltip": "^4.2.21",
     "recordrtc": "^5.6.1",
     "sanitize-html": "^2.3.2",
     "sql-formatter": "^2.3.3",
