--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-autoql": "file:../",
+    "react-autoql": "file:./react-autoql",
     "antd": "^4.0.1",
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
