--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
       dockerfile: ./docker/test-page/Dockerfile
     container_name: test_page_c
     ports:
-      - '3001:3001'
+      - '8080:8080'
     stdin_open: true
     tty: true
+    environment:
+      - SERVER_HOST=localhost
