--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "d3-scale": "^4.0.2",
     "d3-selection": "^1.4.0",
     "d3-shape": "^1.3.5",
+    "d3-time": "^3.0.0",
     "d3-transition": "^3.0.1",
     "date-fns": "^2.28.0",
     "dayjs": "^1.8.36",
@@ -104,8 +105,8 @@
     "react-collapse": "^5.1.1",
     "react-contenteditable": "^3.3.5",
     "react-custom-scrollbars": "^4.2.1",
-    "react-date-range": "^1.4.0",
     "react-custom-scrollbars-2": "^4.5.0",
+    "react-date-range": "^1.4.0",
     "react-grid-layout": "^1.3.4",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
@@ -123,7 +124,6 @@
     "sanitize-html": "^2.3.2",
     "sql-formatter": "^2.3.3",
     "stylis": "^4.0.4",
-    "tabulator-tables": "4.7.2",
     "throttle-debounce": "^2.1.0",
     "uuid": "^8.3.2"
   },
