--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "rc-drawer": "^4.4.3",
     "react-autosuggest": "^10.1.0",
     "react-collapse": "^5.1.1",
+    "react-collapsible": "^2.10.0",
     "react-contenteditable": "^3.3.5",
     "react-custom-scrollbars": "^4.2.1",
     "react-custom-scrollbars-2": "^4.5.0",
