--- a/cloudbuild-master.yaml
+++ b/cloudbuild-master.yaml
@@ -7,6 +7,10 @@ steps:
       - |
         ls -al
         pwd
+        npm ci
+        npm i react@16.14.0 react-dom@16.14.0 -D
+        npm run test
+        npx semantic-release --dry-run
 
     secretEnv: ["NPM_TOKEN", "GH_TOKEN"]
 
