--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,22 +1,4 @@
 steps:
-  # Clone the repository and check tags
-  - name: 'us.gcr.io/$PROJECT_ID/gcp-azure-base:v1'
-    id: Clone and Check Tags
-    entrypoint: /bin/bash
-    args:
-      - '-exc'
-      - |
-        echo "Branch Name: $BRANCH_NAME"
-        echo "Git commit SHA: $COMMIT_SHA"
-        exit 0
-        if [ -n "$TAG_NAME" ];then
-          LAST_TAG=$$(git ls-remote --tags --refs --symref git@github.com:chatatechnologies/$REPO_NAME.git | cut -d'/' -f 3 | grep -E -o '^v[0-9]+.[0-9]+.[0-9]+(-(alpha|beta|rc)(.[0-9]+))?$' | sed '/-/!{s/$/_/;}' | sort -Vr | sed 's/_$//' | head -n 1)
-          if [ "$TAG_NAME" != "$$LAST_TAG" ]; then
-            echo "Tag $TAG_NAME must greater than latest tag $$LAST_TAG"
-            exit 1
-          fi
-        fi
-
   - name: 'gcr.io/kaniko-project/executor:debug-${_KANIKO_VERSION}'
     id: Build
     entrypoint: /busybox/sh
@@ -33,6 +15,7 @@ steps:
     args:
       - '-exc'
       - |
+        exit
         PROJECT_ID=$PROJECT_ID BUILD_ID=$BUILD_ID COMMIT_SHA=$COMMIT_SHA REVISION_ID=$REVISION_ID SHORT_SHA=$SHORT_SHA REPO_NAME=$REPO_NAME BRANCH_NAME=$BRANCH_NAME TAG_NAME=$TAG_NAME
         _DEBUG=$_DEBUG
         [ -f ./config/cloudbuild_before_release.sh ] && source ./config/cloudbuild_before_release.sh
