--- a/config/prod-config.ini
+++ b/config/prod-config.ini
@@ -22,8 +22,8 @@
 #   then add variable and it's value in stag-config.ini and prod-config.ini, use format key = value
 #   the best way add key is use command update_ini in _devops
 
-[autoql-excel-plugin]
-  app=autoql-excel-plugin
+[react-autoql-test-page]
+  app=react-autoql-test-page
   cloud=gcp
   REPLICACOUNT=2
 
@@ -31,12 +31,9 @@
   CPU='300m'
   MEMORY='300Mi'
   MEMORYLIMIT='1Gi'
-  
+
   #imagepull secrets
   IMAGEPULLSECRET='gcr-secret-production'
 
-  SERVER_HOST=autoql-excel-plugin.chata.io
-  BACKEND_URL=https://backend.chata.io
-  IS_PORTABLE='false'
-  EXCEL_PLUGIN_INTEGRATOR_ID='none' 
-  ENV=production
+  SERVER_HOST='react-autoql-test-page.chata.io'
+  ENV=staging
