--- a/config/stag-config.ini
+++ b/config/stag-config.ini
@@ -22,8 +22,8 @@
 #   then add variable and it's value in stag-config.ini and prod-config.ini, use format key = value
 #   the best way add key is use command update_ini in _devops
 
-[autoql-excel-plugin]
-  app=autoql-excel-plugin
+[react-autoql-test-page-staging]
+  app=react-autoql-test-page-staging
   cloud=gcp
   REPLICACOUNT=2
 
@@ -35,8 +35,5 @@
   #imagepull secrets
   IMAGEPULLSECRET='gcr-secret-staging'
 
-  SERVER_HOST='autoql-excel-plugin-staging.chata.io'
-  BACKEND_URL=https://backend-staging.chata.io
-  IS_PORTABLE='true'
-  EXCEL_PLUGIN_INTEGRATOR_ID='none' 
+  SERVER_HOST='react-autoql-test-page-staging.chata.io'
   ENV=staging
