--- a/config/prod-config.ini
+++ b/config/prod-config.ini
@@ -28,7 +28,7 @@
   REPLICACOUNT=2
 
   #cpu/memory limits
-  CPU='300m'
+  CPU='100m'
   MEMORY='300Mi'
   MEMORYLIMIT='1Gi'
 
@@ -36,4 +36,4 @@
   IMAGEPULLSECRET='gcr-secret-production'
 
   SERVER_HOST='react-autoql-test-page.chata.io'
-  ENV=staging
+  ENV=production
