WIP: working tables with filters

--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "html-react-parser": "^1.4.9",
     "jwt-decode": "^3.1.2",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.difference": "^4.5.0",
     "lodash.filter": "^4.6.0",
     "lodash.functions": "^4.3.0",
     "lodash.get": "^4.4.2",
@@ -95,6 +96,7 @@
     "lodash.reduce": "^4.6.0",
     "lodash.some": "^4.6.0",
     "lodash.sortby": "^4.7.0",
+    "lodash.transform": "^4.6.0",
     "lodash.uniq": "^4.5.0",
     "make-coverage-badge": "^1.2.0",
     "moment-timezone": "^0.5.32",
