--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,67 +1,58 @@
 steps:
-  - name: "gcr.io/kaniko-project/executor:debug-${_KANIKO_VERSION}"
+  - name: 'gcr.io/kaniko-project/executor:debug-${_KANIKO_VERSION}'
     id: Build
     entrypoint: /busybox/sh
     args:
-      - "-exc"
+      - '-exc'
       - |
         [ -z $TAG_NAME ] && IMAGE_TAG='debug' || IMAGE_TAG=$TAG_NAME
         /kaniko/executor --destination=us.gcr.io/$PROJECT_ID/$REPO_NAME:$$IMAGE_TAG --cache=true --cache-ttl=6000h --use-new-run --snapshotMode=redo
 
   # This step Test & Deploy Helm Chart, Test Deploy
-  - name: "us.gcr.io/$PROJECT_ID/gcp-azure-base:v1"
+  - name: 'us.gcr.io/$PROJECT_ID/gcp-azure-base:v1'
     id: Deploy
     entrypoint: /bin/bash
     args:
-      - "-exc"
+      - '-exc'
       - |
         PROJECT_ID=$PROJECT_ID BUILD_ID=$BUILD_ID COMMIT_SHA=$COMMIT_SHA REVISION_ID=$REVISION_ID SHORT_SHA=$SHORT_SHA REPO_NAME=$REPO_NAME BRANCH_NAME=$BRANCH_NAME TAG_NAME=$TAG_NAME
-        _DEBUG=$_DEBUG 
+        _DEBUG=$_DEBUG
         [ -f ./config/cloudbuild_before_deploy.sh ] && source ./config/cloudbuild_before_deploy.sh
         source ./config/cloudbuild_deploy.sh
     secretEnv:
       [
-        "NPM_TOKEN",
-        "GH_TOKEN",
-        "azure_sp_secret",
-        "azure_sp_username",
-        "azure_sp_tenantid",
-        "cloudbuild_msg_repo",
-        "cloudbuild_msg_pubsub_topic",
-        "cloudbuild_slack_token",
+        'NPM_TOKEN',
+        'GH_TOKEN',
+        'azure_sp_secret',
+        'azure_sp_username',
+        'azure_sp_tenantid',
+        'cloudbuild_msg_repo',
+        'cloudbuild_msg_pubsub_topic',
+        'cloudbuild_slack_token',
       ]
 
 availableSecrets:
   secretManager:
     - versionName: projects/$PROJECT_NUMBER/secrets/npm_token/versions/latest
-      env: "NPM_TOKEN"
+      env: 'NPM_TOKEN'
     - versionName: projects/$PROJECT_NUMBER/secrets/gh_token/versions/latest
-      env: "GH_TOKEN"
+      env: 'GH_TOKEN'
     - versionName: projects/$PROJECT_NUMBER/secrets/azure_sp_secret/versions/latest
-      env: "azure_sp_secret"
+      env: 'azure_sp_secret'
     - versionName: projects/$PROJECT_NUMBER/secrets/azure_sp_username/versions/latest
-      env: "azure_sp_username"
+      env: 'azure_sp_username'
     - versionName: projects/$PROJECT_NUMBER/secrets/azure_sp_tenantid/versions/latest
-      env: "azure_sp_tenantid"
+      env: 'azure_sp_tenantid'
     - versionName: projects/$PROJECT_NUMBER/secrets/cloudbuild_msg_repo/versions/latest
-      env: "cloudbuild_msg_repo"
+      env: 'cloudbuild_msg_repo'
     - versionName: projects/$PROJECT_NUMBER/secrets/cloudbuild_msg_pubsub_topic/versions/latest
-      env: "cloudbuild_msg_pubsub_topic"
+      env: 'cloudbuild_msg_pubsub_topic'
     - versionName: projects/$PROJECT_NUMBER/secrets/cloudbuild_slack_token/versions/latest
-      env: "cloudbuild_slack_token"
+      env: 'cloudbuild_slack_token'
 options:
-  substitution_option: "ALLOW_LOOSE"
+  substitution_option: 'ALLOW_LOOSE'
 
 timeout: 14400s
 
 tags:
-  [
-    "$REPO_NAME",
-    "$COMMIT_SHA",
-    "$SHORT_SHA",
-    "$PROJECT_ID",
-    "$BRANCH_NAME",
-    "$TAG_NAME",
-    "$REVISION_ID",
-    "$BUILD_ID",
-  ]
+  ['$REPO_NAME', '$COMMIT_SHA', '$SHORT_SHA', '$PROJECT_ID', '$BRANCH_NAME', '$TAG_NAME', '$REVISION_ID', '$BUILD_ID']
