--- a/example/package.json
+++ b/example/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react-autoql": "file:./react-autoql",
+    "react-autoql": "file:../",
     "antd": "^4.0.1",
     "axios": "^0.19.0",
     "lodash": "^4.17.15",
-    "penv": "^0.2.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "^3.4.1",
@@ -17,9 +16,8 @@
     "react-app-rewired": "^2.2.1"
   },
   "scripts": {
-    "preinstall": "npx penv $NODE_ENV",
-    "start": "export PORT=3001 npx penv $NODE_ENV && SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
-    "dev": "npx penv $NODE_ENV && SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
+    "start": "export PORT=3001 && SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
+    "dev": "SKIP_PREFLIGHT_CHECK=true react-app-rewired start",
     "build": "SKIP_PREFLIGHT_CHECK=true react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
@@ -34,5 +32,8 @@
     "node": "14.17.3",
     "npm": "^6.0.1"
   },
-  "cacheDirectories": []
+  "cacheDirectories": [],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
