--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "react-splitter-layout": "^4.0.0",
     "react-switch": "^6.0.0",
     "react-tabulator": "^0.15.0",
-    "react-tiny-popover": "7.1.0",
+    "react-tiny-popover": "^7.1.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "recordrtc": "^5.6.1",
