--- a/package.json
+++ b/package.json
@@ -116,7 +116,6 @@
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
     "react-switch": "^6.0.0",
-    "react-tabulator": "^0.15.0",
     "react-tiny-popover": "^7.1.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
@@ -124,6 +123,7 @@
     "sanitize-html": "^2.3.2",
     "sql-formatter": "^2.3.3",
     "stylis": "^4.0.4",
+    "tabulator-tables": "^5.4.3",
     "throttle-debounce": "^2.1.0",
     "uuid": "^8.3.2"
   },
