--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "d3-dispatch": "^3.0.1",
     "d3-format": "^3.1.0",
     "d3-interpolate": "^3.0.1",
-    "d3-scale": "^4.0.2",
+    "d3-scale": "3.3.0",
     "d3-selection": "^1.4.0",
     "d3-shape": "^1.3.5",
     "d3-time": "^3.0.0",
@@ -116,7 +116,7 @@
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
     "react-switch": "^6.0.0",
-    "react-tiny-popover": "^7.1.0",
+    "react-tiny-popover": "7.1.0",
     "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
     "recordrtc": "^5.6.1",
