--- a/package.json
+++ b/package.json
@@ -110,12 +110,12 @@
     "react-switch": "^6.0.0",
     "react-tiny-popover": "7.1.0",
     "react-toastify": "^8.2.0",
-    "react-tooltip": "^4.2.21",
+    "react-tooltip": "^4.5.1",
     "recordrtc": "^5.6.1",
     "sanitize-html": "^2.3.2",
     "sql-formatter": "^2.3.3",
     "stylis": "^4.0.4",
-    "tabulator-tables": "^5.4.3",
+    "tabulator-tables": "5.4.3",
     "throttle-debounce": "^2.1.0",
     "uuid": "^8.3.2"
   },
