--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-date-range": "^1.4.0",
+    "react-device-detect": "^2.2.3",
     "react-grid-layout": "^1.3.4",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
