--- a/package.json
+++ b/package.json
@@ -92,12 +92,11 @@
     "parse-num": "^1.0.0",
     "prop-types": "^15.7.2",
     "rc-drawer": "4.4.3",
+    "rc-scrollbars": "^1.1.5",
     "react-autosuggest": "^10.1.0",
     "react-collapse": "^5.1.1",
     "react-collapsible": "^2.10.0",
     "react-contenteditable": "^3.3.5",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-custom-scrollbars-2": "^4.5.0",
     "react-date-range": "^1.4.0",
     "react-device-detect": "^2.2.3",
     "react-grid-layout": "^1.3.4",
