--- a/package.json
+++ b/package.json
@@ -92,7 +92,6 @@
     "parse-num": "^1.0.0",
     "prop-types": "^15.7.2",
     "rc-drawer": "4.4.3",
-    "rc-scrollbars": "^1.1.5",
     "react-autosuggest": "^10.1.0",
     "react-collapse": "^5.1.1",
     "react-collapsible": "^2.10.0",
@@ -104,6 +103,7 @@
     "react-localization": "^1.0.16",
     "react-modal": "^3.16.1",
     "react-paginate": "^6.3.2",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-select": "^3.1.1",
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
