--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "date-fns": "^2.28.0",
     "dayjs": "^1.8.36",
     "html-react-parser": "^1.4.9",
+    "jstat": "^1.9.6",
     "jwt-decode": "^3.1.2",
     "lodash.clonedeep": "^4.5.0",
     "lodash.filter": "^4.6.0",
@@ -88,6 +89,7 @@
     "lodash.isequal": "^4.5.0",
     "lodash.sortby": "^4.7.0",
     "make-coverage-badge": "^1.2.0",
+    "mathjs": "^11.8.0",
     "moment-timezone": "^0.5.32",
     "parse-num": "^1.0.0",
     "prop-types": "^15.7.2",
@@ -105,6 +107,7 @@
     "react-paginate": "^6.3.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-select": "^3.1.1",
+    "react-slider": "^2.0.4",
     "react-speech-recognition": "^2.0.7",
     "react-splitter-layout": "^4.0.0",
     "react-switch": "^6.0.0",
