--- a/package.json
+++ b/package.json
@@ -63,19 +63,19 @@
   "dependencies": {
     "@babel/runtime": "^7.16.0",
     "@react-icons/all-files": "^4.1.0",
-    "axios": "^0.21.2",
+    "autoql-fe-utils": "1.0.15",
+    "axios": "^1.4.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
-    "d3-collection": "^1.0.7",
     "d3-color": "^3.1.0",
     "d3-dispatch": "^3.0.1",
     "d3-format": "^3.1.0",
     "d3-interpolate": "^3.0.1",
     "d3-scale": "3.3.0",
-    "d3-selection": "^1.4.0",
-    "d3-shape": "^1.3.5",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
     "d3-time": "^3.0.0",
-    "d3-transition": "^3.0.1",
+    "d3-transition": "3.0.1",
     "date-fns": "^2.28.0",
     "dayjs": "^1.8.36",
     "html-react-parser": "^1.4.9",
