--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "react-contenteditable": "^3.3.5",
     "react-date-range": "^1.4.0",
     "react-device-detect": "^2.2.3",
-    "react-grid-layout": "^1.3.4",
+    "react-grid-layout": "1.3.4",
     "react-infinite-scroller": "^1.2.4",
     "react-localization": "^1.0.16",
     "react-modal": "^3.16.1",
