--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
   "dependencies": {
     "@babel/runtime": "^7.16.0",
     "@react-icons/all-files": "^4.1.0",
-    "autoql-fe-utils": "1.0.16",
+    "autoql-fe-utils": "1.0.18",
     "axios": "^1.4.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
@@ -188,8 +188,8 @@
     "react-dom": ">=16.8.1"
   },
   "engines": {
-    "node": "14.17.3",
-    "npm": "6.14.13"
+    "node": ">=14.17.3",
+    "npm": ">=6.14.13"
   },
   "config": {
     "commitizen": {
