--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "dependencies": {
     "@babel/runtime": "^7.16.0",
     "@react-icons/all-files": "^4.1.0",
-    "autoql-fe-utils": "1.0.18",
+    "autoql-fe-utils": "^1.0.19",
     "axios": "^1.4.0",
     "d3-array": "^2.3.3",
     "d3-axis": "^1.0.12",
