add --legacy-peer-deps to ci install

--- a/cloudbuild-master.yaml
+++ b/cloudbuild-master.yaml
@@ -5,8 +5,8 @@ steps:
     args:
       - '-exc'
       - |
-        npm ci
-        npm i react@16.8.1 react-dom@16.8.1 -D
+        npm ci --legacy-peer-deps
+        npm i react@16.8.1 react-dom@16.8.1 -D --legacy-peer-deps
         npm run test
 
     secretEnv: ['NPM_TOKEN', 'GH_TOKEN']
